# Advent_of_Code_Solver

./: .coverage  pyproject.toml
AOC/: __main__.py  main.py
AOC/tasks/: tasks.py
adventofcode/: __main__.py  main.py
adventofcode/logic/: inputloader.py  task.py  taskmanager.py
adventofcode/logic/solver/: solver.py  solverstrategy.py
adventofcode/logic/task/: task.py  taskmanager.py
adventofcode/logic/transformer/: inputtransformer.py  transfomerstrategy.py
scripts/: run.sh  test.sh  verify_code.sh
tests/: conftest.py
tests/logic/: test_inputloader.py  test_solver_strategy.py
tests/logic/solver/: test_solver.py
tests/logic/task/: test_task.py  test_taskmanager.py
tests/logic/transformer/: test_inputtransformer.py  test_transformerstrategy.py
