[tool.poetry]
name = "AOC_2022"
version = "0.1.0"
description = ""
authors = ["aguentner <andreas.guentner@scandio.de>"]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.15.9"
isort = "^5.11.4"
black = "^22.12.0"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=adventofcode"
testpaths = ["tests"]